--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -170,7 +170,7 @@
                     </div>
                     <details {% if form.errors %}open{% endif %} class="fr-mt-3w fr-col-12 fr-col-md-5">
                         <summary>
-                            <div class="fr-btn fr-mt-auto fr-mb-1w">Changer l'administration</div>
+                            <div class="fr-btn fr-mt-auto fr-ml-auto fr-mb-1w">Changer l'administration</div>
                         </summary>
                         <form method="post" action="">
                             {% csrf_token %}
@@ -178,9 +178,11 @@
                                 {% url 'users:search_administration' as search_administration_url %}
                                 {% include "common/form/input_search_select.html" with form_input=form.administration url=search_administration_url %}
                             {% endwith %}
-                            <button name="change_administration" value="True"
+
+                            <button
+                                name="change_administration"
+                                value="True"
                                 class="fr-btn fr-btn--secondary fr-btn--icon-left fr-icon-warning-line" type="submit"
-                                form="{{ form_id }}"
                             >
                                 Valider le changement d'administration
                             </button>
