--- a/templates/conventions/_bailleur_administration.html
+++ b/templates/conventions/_bailleur_administration.html
@@ -9,38 +9,39 @@
                 {{ convention.administration }}
             </strong>
         </div>
-        <div class="fr-col-12 fr-mt-1w">
-            <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--top">
-                <div class="fr-col-12 fr-col-md-7">
-                    <strong>Ce n'est pas la bonne administration ?</strong>
-                    <p>
-                        Vous pouvez changer l'administration de cette convention. <br />
-                        cette opération est irréversible et vous fera perdre l'accès à cette convention.
-                    </p>
-                </div>
-                <details {% if form.errors %}open{% endif %} class="fr-mt-3w fr-col-12 fr-col-md-5">
-                    <summary>
-                        <div class="fr-btn fr-mt-auto fr-ml-auto fr-mb-1w">Changer l'administration</div>
-                    </summary>
-                    <form method="post" action="">
-                        {{ form.errors }}
-                        {% csrf_token %}
-                        {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
-                            {% url 'users:search_administration' as search_administration_url %}
-                            {% include "common/form/input_search_select.html" with form_input=form.administration url=search_administration_url %}
-                        {% endwith %}
-                        {% include "common/form/input_text.html" with form_input=form.verification %}
+        {% if request|is_instructeur %}
+            <div class="fr-col-12 fr-mt-1w">
+                <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--top">
+                    <div class="fr-col-12 fr-col-md-7">
+                        <strong>Ce n'est pas la bonne administration ?</strong>
+                        <p>
+                            Vous pouvez changer l'administration de cette convention. <br />
+                            cette opération est irréversible et vous fera perdre l'accès à cette convention.
+                        </p>
+                    </div>
+                    <details {% if form.errors %}open{% endif %} class="fr-mt-3w fr-col-12 fr-col-md-5">
+                        <summary>
+                            <div class="fr-btn fr-mt-auto fr-ml-auto fr-mb-1w">Changer l'administration</div>
+                        </summary>
+                        <form method="post" action="">
+                            {{ form.errors }}
+                            {% csrf_token %}
+                            {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
+                                {% url 'users:search_administration' as search_administration_url %}
+                                {% include "common/form/input_search_select.html" with form_input=form.administration url=search_administration_url %}
+                            {% endwith %}
 
-                        <button
-                            name="change_administration"
-                            value="True"
-                            class="fr-btn fr-btn--secondary fr-btn--icon-left fr-icon-warning-line" type="submit"
-                        >
-                            Valider le changement d'administration
-                        </button>
-                    </form>
-                </details>
+                            <button
+                                name="change_administration"
+                                value="True"
+                                class="fr-btn fr-btn--secondary fr-btn--icon-left fr-icon-warning-line" type="submit"
+                            >
+                                Valider le changement d'administration
+                            </button>
+                        </form>
+                    </details>
+                </div>
             </div>
-        </div>
+        {% endif %}
     {% endwith %}
 {% endblock content %}
