--- a/templates/conventions/commentaires.html
+++ b/templates/conventions/commentaires.html
@@ -5,15 +5,12 @@
 {% load static %}
 
 {% block javascript_extras %}
-    <script src="{% static "dropzonejs/min/dropzone.min.js" %}" nonce="{{request.csp_nonce}}"></script>
-    <script src="{% static "dropzonejs/min/dropzone-amd-module.min.js" %}" nonce="{{request.csp_nonce}}"></script>
-    <script src="{% static "js/dropzone-client.js" %}" nonce="{{request.csp_nonce}}"></script>
+    {% include "common/dropzone.js.html" %}
     <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
 {% block css_extras %}
-    <link rel="stylesheet" href="{% static "dropzonejs/min/basic.min.css" %}">
-    <link rel="stylesheet" href="{% static "dropzonejs/min/dropzone.min.css" %}">
+    {% include "common/dropzone.css.html" %}
 {% endblock %}
 
 {% block content %}
