Modifier l'administration dans une étape de la convention (#969)
* wip - update administration location

* Remove previous approach

* add modal in form step

* Redirect on save

* better handle not set attribute

* Fix tests

* Remove conditionnal

* add filter in steps and add tests

* better handle form steps in view

* simpler template

* wip

* move attributes to properties

* update tests

* wip

* move down admin in list

* Revert "move down admin in list"

This reverts commit 7c6a025800aaf8e1f71cca46acd680a02bac27ed.

* Add administration to bailleur & administration section in recapitulatif

* Remove administration step

* add administration section in bailleur first step

* add administration section in bailleur first step

* refactor upform approach

* WIP

* autoreview

* REMOVE MODAL APPROACH - Could be reverted if needed in another PR

* Refactor, suite

* Simplify template build in form step

* Remove useless file

* lasst changes - self review

* Remove logger

* Update conventions/views/__init__.py

Co-authored-by: Nicolas Oudard <nicolas.oudard@beta.gouv.fr>

* Update conventions/services/bailleurs.py

---------

Co-authored-by: Nicolas Oudard <nicolas.oudard@beta.gouv.fr>

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -43,7 +43,9 @@
                     {% include "conventions/recapitulatif/commentaires.html" with target_url='conventions:avenant_commentaires' %}
                 {% elif convention.is_avenant %}
                     {% if 'bailleur' in avenant_list %}
-                        {% include "conventions/recapitulatif/bailleur.html" with target_url='conventions:avenant_bailleur' bailleur=convention.bailleur %}
+                        {% if convention_form_steps|is_a_step:'ConventionBailleurView' or convention_form_steps|is_a_step:'AvenantBailleurView' %}
+                            {% include "conventions/recapitulatif/bailleur.html" with target_url='conventions:avenant_bailleur' bailleur=convention.bailleur %}
+                        {% endif %}
                     {% endif %}
                     {% if 'programme' in avenant_list %}
                         {% include "conventions/recapitulatif/operation.html" with target_url='conventions:avenant_programme' programme=convention.programme lot=convention.lot %}
@@ -130,11 +132,6 @@
                     {% include "conventions/actions/type1and2_options.html" %}
                     {% if not convention.is_denonciation %}
                         {% include "conventions/actions/generate_convention.html" %}
-                    {% endif %}
-                    {% if request.path != "conventions:sent" %}
-                        {% comment %} La convention ne doit pas être affichée sur la vue
-                        Informations détaillées d'une convention finalisée {% endcomment %}
-                        {% include "conventions/actions/update_administration.html" %}
                     {% endif %}
                     {% include "conventions/actions/cancel_convention.html" %}
                     {% include "conventions/actions/delete.html" %}
