--- a/templates/layout/siap/menu.html
+++ b/templates/layout/siap/menu.html
@@ -15,7 +15,7 @@
                                                 <a
                                                     class="fr-nav__link"
                                                     href="{{ request|get_menu_url:submenu.url }}"
-                                                    target={% if submenu.openNewWindow %}"_blank"{% else %}"_self"{% endif %}
+                                                    {% if submenu.openNewWindow %}target="_blank" rel="noreferrer"{% else %}target="_self"{% endif %}
                                                     {% if submenu.url|is_conventionnement_menu_url %}aria-current="page"{% endif %}
                                                 >
                                                     {{submenu.libelle}}
