Allow next and save button to be outside the form it targets Suite à la régression du formulaire de modification du bailleur : * Ajout d'un paramètre au composant button form (next_and_save), qui permet d'ajouter un attribut sur le bouton pour cibler le formulaire dans la page qui va être soumis au clic sur ce bouton 🥵 * ajout de l'id sur le formulaire signataire et sur l'include du bouton correspondant

--- a/templates/conventions/_bailleur_signataire.html
+++ b/templates/conventions/_bailleur_signataire.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="fr-col-12">
-        <form method="post" action="">
+        <form method="post" action="" id="bailleur_signataire">
             {% csrf_token %}
 
             {% include "common/form/input_text.html" with form_input=form.signataire_nom object_field="bailleur__signataire_nom__"|add:form.uuid.value %}
