--- a/templates/common/button/next_and_save.html
+++ b/templates/common/button/next_and_save.html
@@ -1,3 +1,3 @@
-<button class="fr-btn fr-icon-arrow-right-s-line fr-btn--icon-right">
+<button class="fr-btn fr-icon-arrow-right-s-line fr-btn--icon-right" {% if targetted_form %}form="{{ targetted_form }}"{% endif %}>
     Enregistrer et Suivant
 </button>
