--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -20,6 +20,6 @@
         {% include "conventions/_bailleur_entreprise.html" %}
         {% include "conventions/_bailleur_signataire.html" %}
         {% include "conventions/_bailleur_administration.html" %}
-        {% include "conventions/common/form_footer_button.html" %}
+        {% include "conventions/common/form_footer_button.html" with targetted_form="bailleur_signataire" %}
     </div>
 {% endblock %}
