--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -17,9 +17,11 @@
     {% include "conventions/common/form_header.html"%}
     {% include "common/step_progressbar.html"%}
     <div class="fr-container">
-        {% include "conventions/_bailleur_entreprise.html" %}
-        {% include "conventions/_bailleur_signataire.html" %}
-        {% include "conventions/_bailleur_administration.html" %}
+        <form method="post" action="">
+            {% include "conventions/_bailleur_entreprise.html" %}
+            {% include "conventions/_bailleur_signataire.html" %}
+            {% include "conventions/_bailleur_administration.html" %}
+        </form>
         {% include "conventions/common/form_footer_button.html" with targetted_form="bailleur_signataire" %}
     </div>
 {% endblock %}
