--- a/templates/conventions/_bailleur_administration.html
+++ b/templates/conventions/_bailleur_administration.html
@@ -19,26 +19,22 @@
                             cette opération est irréversible et vous fera perdre l'accès à cette convention.
                         </p>
                     </div>
-                    <details {% if form.errors %}open{% endif %} class="fr-mt-3w fr-col-12 fr-col-md-5">
+                    <details {% if form.errors %}open=""{% endif %} class="fr-mt-3w fr-col-12 fr-col-md-5">
                         <summary>
                             <div class="fr-btn fr-mt-auto fr-ml-auto fr-mb-1w">Changer l'administration</div>
                         </summary>
-                        <form method="post" action="">
-                            {{ form.errors }}
-                            {% csrf_token %}
-                            {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
-                                {% url 'users:search_administration' as search_administration_url %}
-                                {% include "common/form/input_search_select.html" with form_input=form.administration url=search_administration_url %}
-                            {% endwith %}
+                        {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
+                            {% url 'users:search_administration' as search_administration_url %}
+                            {% include "common/form/input_search_select.html" with form_input=form.administration url=search_administration_url %}
+                        {% endwith %}
 
-                            <button
-                                name="change_administration"
-                                value="True"
-                                class="fr-btn fr-btn--secondary fr-btn--icon-left fr-icon-warning-line" type="submit"
-                            >
-                                Valider le changement d'administration
-                            </button>
-                        </form>
+                        <button
+                            name="change_administration"
+                            value="True"
+                            class="fr-btn fr-btn--secondary fr-btn--icon-left fr-icon-warning-line" type="submit"
+                        >
+                            Valider le changement d'administration
+                        </button>
                     </details>
                 </div>
             </div>
