--- a/files/templates/forms/files.html
+++ b/files/templates/forms/files.html
@@ -1,1 +1,3 @@
-<input data-dropzone-url="/files" type="{{ widget.type }}" name="{{ widget.name }}"{% if widget.value != None %} value="{{ widget.value|stringformat:'s' }}"{% endif %}{% include "django/forms/widgets/attrs.html" %}>
+<div class="dropzone dz">
+    <input data-dropzone-url="/files" type="{{ widget.type }}" name="{{ widget.name }}"{% if widget.value != None %} value="{{ widget.value|stringformat:'s' }}"{% endif %}{% include "django/forms/widgets/attrs.html" %}>
+</div>
