--- a/templates/conventions/common/form_commentaires.html
+++ b/templates/conventions/common/form_commentaires.html
@@ -7,14 +7,11 @@
             {% include "common/form/input_upload.html" with form_input=form.attached form_input_files=form.attached_files object_name='convention' object_uuid=convention.uuid file_list=convention.attached|get_files_from_textfiles textarea=False object_field="convention__attached__"|add:form.uuid.value %}
         {% endif %}
 
-
         <div class="apilos-bordered fr-my-3w">
             <p class="notes">
                 <em>Ces informations sont complémentaires et à destination de l’instructeur. Elles ne figureront pas dans le document final de la convention.</em>
             </p>
-            {% comment %}
-            {% include "common/form/input_upload.html" with form_input=form.commentaires form_input_files=form.commentaires_files object_name='convention' object_uuid=convention.uuid file_list=convention.commentaires|get_files_from_textfiles textarea=True verticalDisplay=True object_field="convention__commentaires__"|add:form.uuid.value %}
-            {% endcomment %}
+            {{ form.commentaires_text }}
             {{ form.commentaires_files }}
         </div>
     </div>
