--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -61,7 +61,7 @@
                         {% if convention.programme.is_residence %}
 
                             <h4>Agrément de gestionnaire ou agrément d'intermédiation</h4>
-                            <span><em>Agrément de gestionnaire de résidence sociale prévu à l'article R. 353-165-1 ou agrément d'intermédiation locative et de gestion locative sociale mentionné à l'article L. 365-4 et délivré par le préfet du département</em></span>
+                            <span><em>Agrément délivré pour la gestion locative sociale et l'intermédiation locative, agrément mentionné à l'article L. 365-4 et à l'article R. 353-165 du CCH</em></span>
                             <div class="fr-grid-row fr-grid-row--gutters fr-mb-5w">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-pl-md-1w">
                                     {% include "common/form/input_text.html" with form_input=form.departement_residence_argement_gestionnaire_intermediation object_field="programme__departement_residence_argement_gestionnaire_intermediation__"|add:form.uuid.value placeholder="Département" %}
