ajout de l'icone + modif du texte + mise à jour des requirements

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -28,12 +28,11 @@
         <div class="fr-container fr-p-4w">
             <div class="block--row-strech">
                 <div class="block--row-strech-1 fr-mr-4w fr-grid-row fr-grid-row--gutters fr-grid-row--middle ">
-                    <img class="fr-mr-3w"  src="{% static 'icons/warning.svg' %}" alt="warning">
+                    <img class="fr-mr-3w"  src="{% static 'icons/information.svg' %}" alt="information">
                     <div>
-                        <p class="fr-mb-0 fr-text--lead">Le SIAP sera prochainement votre unique porte d’entrée vers APiLos !</p>
-                        <p class="fr-mb-0">APiLos est désormais un module integré au Système d'Information des Aides à la Pierre.
+                        <p class="fr-mb-0 fr-text--lead">À partir du 25 décembre 2023, le SIAP sera votre unique porte d'entrée vers APiLos.</p>
+                        <p class="fr-mb-0">Celui-ci centralise toutes vos demandes de financement et de conventionnement.
                             <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/passage-vers-le-siap/passage-au-siap" target="_blank"  rel="noopener">En savoir plus</a>
-
                         </p>
                     </div>
                 </div>
