--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -55,6 +55,7 @@
                             {% include "common/form/download_upload_form.html" with file_type='logements_edd' upform=upform  what="logements pour l'EDD simplifié"%}
                             <hr class="fr-col-12 fr-my-3w">
                         </div>
+                        {% include "common/form/input_upload.html" with form_input=form.edd_stationnements form_input_files=form.edd_stationnements_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.edd_stationnements|get_files_from_textfiles object_field="programme__edd_stationnements__"|add:form.uuid.value %}
 
                         {% for error in import_warnings %}
                             <p id="text-input-error-desc-error" class="fr-error-text">
