--- a/templates/common/messages.html
+++ b/templates/common/messages.html
@@ -1,5 +1,7 @@
-{% for message in messages %}
-    <div role="success" class="fr-alert fr-alert--{{ message.tags }} fr-mb-3w">
-        <p>{{ message }}</p>
-    </div>
-{% endfor %}
+{% if messages %}
+    {% for message in messages %}
+        <div role="success" class="fr-alert fr-alert--{{ message.tags }} fr-mb-3w">
+            <p>{{ message }}</p>
+        </div>
+    {% endfor %}
+{% endif %}
