--- a/templates/conventions/recapitulatif/denonciation.html
+++ b/templates/conventions/recapitulatif/denonciation.html
@@ -5,7 +5,7 @@
                 <div class="block--row-strech" id="{{object_field}}_div">
                     <div class="block--row-strech-1">
                         <h4 class="fr-card__title">
-                            Dénonciation de la convention
+                            Dénonciation de la convention 1
                         </h4>
                     </div>
                     {% include "conventions/actions/goto.html" %}
