Update convention history

--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -35,6 +35,7 @@
                     </div>
                     {% include "conventions/avenant_list.html" with conventions=avenants %}
                     {% include "conventions/denonciation_list.html" with conventions=denonciation %}
+                    {% include "conventions/resiliation_list.html" with conventions=resiliation%}
                 </div>
             {% else %}
                 <div class="fr-py-3w">
