--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -46,7 +46,7 @@
                     {% include "conventions/recapitulatif/commentaires.html" with target_url='conventions:avenant_commentaires' %}
                 {% elif convention.is_resiliation %}
                     {% include "conventions/recapitulatif/resiliation.html"  with target_url='conventions:resiliation' %}
-                    {% include "conventions/recapitulatif/commentaires.html" with target_url='conventions:avenant_commentaires' %}
+                    {% include "conventions/recapitulatif/resiliation_acte.html"  with target_url='conventions:resiliation_acte' %}
                 {% elif convention.is_avenant %}
                     {% if 'bailleur' in avenant_list %}
                         {% if convention_form_steps|is_a_step:'ConventionBailleurView' or convention_form_steps|is_a_step:'AvenantBailleurView' %}
