--- a/templates/conventions/resiliation_acte.html
+++ b/templates/conventions/resiliation_acte.html
@@ -27,16 +27,11 @@
             {% csrf_token %}
             <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                 <div class="fr-col-12 fr-mb-4w">
-                    <h4>Date de résiliation demandée</h4>
-                    {% include "common/form/input_date.html" with form_input=form.date_resiliation_demandee object_field="convention__date_resiliation_demandee__"|add:form.uuid.value %}
+                    <h4>Date de résiliation définitive</h4>
+                    {% include "common/form/input_date.html" with form_input=form.date_resiliation_definitive object_field="convention__date_resiliation_definitive__"|add:form.uuid.value %}
                 </div>
                 <div class="fr-col-12 fr-mb-4w">
-                    <h4>Motif de résiliation</h4>
-                    {% include "common/form/input_textarea.html" with form_input=form.motif_resiliation object_field="convention__motif_resiliation__"|add:form.uuid.value %}
-                </div>
-                <div class="fr-col-12 fr-mb-4w">
-                    <h4>Champ libre facultatif</h4>
-                    {% include "common/form/input_textarea.html" with form_input=form.champ_libre_avenant object_field="convention__champ_libre_avenant__"|add:form.uuid.value %}
+                    {% include "common/form/input_upload.html" with form_input=form.fichier_instruction_resiliation form_input_files=form.fichier_instruction_resiliation_files object_name='convention' object_uuid=convention.uuid file_list=convention.fichier_instruction_resiliation|get_files_from_textfiles object_field="convention__fichier_instruction_resiliation__"|add:form.uuid.value %}
                 </div>
                 {% include "conventions/common/form_footer_button.html" %}
             </div>
