--- a/templates/conventions/recapitulatif/resiliation.html
+++ b/templates/conventions/recapitulatif/resiliation.html
@@ -11,7 +11,7 @@
                     {% include "conventions/actions/goto.html" %}
                 </div>
                 <div class="table--limited-height">
-                    {% include "common/display_field_if_exists.html" with label="Date de la résiliation" value=convention.date_resiliation object_field="convention__date_resiliation__"|add:convention_uuid %}
+                    {% include "common/display_field_if_exists.html" with label="Date de la résiliation demandée" value=convention.date_resiliation_demandee object_field="convention__date_resiliation_demandee__"|add:convention_uuid %}
                     {% include "common/display_textfield_if_exists.html" with label="Motif de la résiliation" value=convention.motif_resiliation object_field="convention__motif_resiliation__"|add:convention_uuid %}
                     {% include "common/display_textfield_if_exists.html" with label="Champ libre facultatif" value=convention.champ_libre_avenant object_field="convention__champ_libre_avenant__"|add:convention_uuid %}
                 </div>
