--- a/templates/conventions/resiliation.html
+++ b/templates/conventions/resiliation.html
@@ -11,16 +11,15 @@
             {% csrf_token %}
             <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                 <div class="fr-col-12 fr-mb-4w">
-                    <h4>Date de résiliation demandée</h4>
-                    {% include "common/form/input_date.html" with form_input=form.date_resiliation_demandee object_field="convention__date_resiliation_demandee__"|add:form.uuid.value %}
+                    <h4>Date de résiliation</h4>
+                    {% include "common/form/input_date.html" with form_input=form.date_resiliation object_field="convention__date_resiliation__"|add:form.uuid.value %}
                 </div>
                 <div class="fr-col-12 fr-mb-4w">
                     <h4>Motif de résiliation</h4>
                     {% include "common/form/input_textarea.html" with form_input=form.motif_resiliation object_field="convention__motif_resiliation__"|add:form.uuid.value %}
                 </div>
                 <div class="fr-col-12 fr-mb-4w">
-                    <h4>Champ libre facultatif</h4>
-                    {% include "common/form/input_textarea.html" with form_input=form.champ_libre_avenant object_field="convention__champ_libre_avenant__"|add:form.uuid.value %}
+                    {% include "common/form/input_upload.html" with form_input=form.commentaires form_input_files=form.commentaires_files object_name='convention' object_uuid=convention.uuid file_list=convention.commentaires|get_files_from_textfiles textarea=True verticalDisplay=True object_field="convention__commentaires__"|add:form.uuid.value %}
                 </div>
                 {% include "conventions/common/form_footer_button.html" %}
             </div>
