--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -116,7 +116,7 @@
                             </div>
                         </div>
 
-                        {# Champs annee de valildation #}
+                        {# Champs annee de validation #}
                         {% if validation_year_choices %}
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                                 <div class="">
